--- a/modules/infrastructure/src/main/resources/fp-frontend/public/html/login.html
+++ b/modules/infrastructure/src/main/resources/fp-frontend/public/html/login.html
@@ -13,7 +13,7 @@
 
   <body>
     <div id="elm"></div>
-    <script type="text/javascript" src="../../dist/login/login.js"></script>
+    <script type="text/javascript" src="/public/js/login.js"></script>
   </body>
 
 </html>
