--- a/modules/infrastructure/src/main/resources/fp-frontend/public/html/fp-common.html
+++ b/modules/infrastructure/src/main/resources/fp-frontend/public/html/fp-common.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -8,19 +9,20 @@
     <link rel="stylesheet" href="/public/css/fp/fp.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
   </head>
+
   <body>
     <header class="nav">
       <div class="hero is-info">
-         <div id="fp-hero" class="hero-body">
-             <div class="container">
-                <h1 class="title">Function Point 計算機</h1>
-             </div>
-         </div>
+        <div id="fp-hero" class="hero-body">
+          <div id="fp-hero_title" class="container">
+            <h1 class="title">Function Point 計算機</h1>
+          </div>
+        </div>
       </div>
     </header>
     <main class="columns">
       <div class="submenu column is-3">
-        <br/>
+        <br />
         <aside class="box fp-menu">
           <p class="menu-label">
             ファンクションポイント計算
@@ -38,7 +40,7 @@
         </aside>
       </div>
       <div class="column">
-        <br/>
+        <br />
         <aside class="box fp-system-title">
           〇〇システム ver1.2
         </aside>
@@ -48,4 +50,5 @@
       </div>
     </main>
   </body>
+
 </html>
