ヘッダ、メニュー等のパーツをElm化

--- a/modules/infrastructure/src/main/resources/fp-frontend/public/html/system.html
+++ b/modules/infrastructure/src/main/resources/fp-frontend/public/html/system.html
@@ -4,14 +4,14 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>FP - ログイン</title>
     <link rel="stylesheet" href="/public/css/vender/bulma-0.7.4/css/bulma.min.css">
     <link rel="stylesheet" href="/public/css/fp/fp.css">
+    </script>
   </head>
 
   <body>
     <div id="elm"></div>
-    <script type="text/javascript" src="/public/js/login.js"></script>
+    <script type="text/javascript" src="/public/js/system.js"></script>
   </body>
 
 </html>
